[package]
name = "rust_em"
version = "0.1.0"
authors = ["Jonathan Hyland <85582235+jonathan-hyland@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.126", features = ["derive"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
